WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90369
[EFL] Fix compilation error in GamepadsEfl.cpp in debug mode
https://bugs.webkit.org/show_bug.cgi?id=90369
Summary
[EFL] Fix compilation error in GamepadsEfl.cpp in debug mode
Chris Dumez
Reported
2012-07-02 02:42:41 PDT
Compilation error: /opt/tmpsantos/projects/webkit-efl/Source/WebCore/platform/efl/GamepadsEfl.cpp: In member function ‘void WebCore::GamepadsEfl::registerDevice(const WTF::String&)’: /opt/tmpsantos/projects/webkit-efl/Source/WebCore/platform/efl/GamepadsEfl.cpp:182:13: error: ‘LOG_CHANNEL_PREFIXGamepad’ was not declared in this scope /opt/tmpsantos/projects/webkit-efl/Source/WebCore/platform/efl/GamepadsEfl.cpp: In member function ‘void WebCore::GamepadsEfl::unregisterDevice(const WTF::String&)’: /opt/tmpsantos/projects/webkit-efl/Source/WebCore/platform/efl/GamepadsEfl.cpp:199:13: error: ‘LOG_CHANNEL_PREFIXGamepad’ was not declared in this scope
Attachments
Patch
(1.67 KB, patch)
2012-07-02 02:43 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-07-02 02:43:55 PDT
Created
attachment 150386
[details]
Patch Could someone please cq+ ?
WebKit Review Bot
Comment 2
2012-07-02 03:44:22 PDT
Comment on
attachment 150386
[details]
Patch Clearing flags on attachment: 150386 Committed
r121668
: <
http://trac.webkit.org/changeset/121668
>
WebKit Review Bot
Comment 3
2012-07-02 03:44:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug