[EFL] Fix compilation error in GamepadsEfl.cpp in debug mode https://bugs.webkit.org/show_bug.cgi?id=90369

Unreviewed, EFL build fix.

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-07-02

* platform/efl/GamepadsEfl.cpp:
(WebCore::GamepadsEfl::registerDevice):
(WebCore::GamepadsEfl::unregisterDevice):

Canonical link: https://commits.webkit.org/108228@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121668 268f45cc-cd09-0410-ab3c-d52691b4dbfc